feli hat jetzt astropy

--- a/data_sat.ipynb
+++ b/data_sat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,14 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [
     {
@@ -327,12 +320,13 @@
     "start_time = x0_fit - 2 * sigma_fit\n",
     "end_time = x0_fit + 2 * sigma_fit\n",
     "print(f\"Peak Time Period: {start_time:.2f} to {end_time:.2f}\")\n",
-    "dT = 2*np.sqrt(2*np.log(2))*sigma_fit"
+    "dT = 2*np.sqrt(2*np.log(2))*sigma_fit\n",
+    "dTT = end_time - start_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +350,7 @@
     "G = 6.67430e-11  # Gravitational constant in m^3 kg^-1 s^-2\n",
     "M = 5.972e24  # Mass of the Earth in kg\n",
     "a = 14 * 0.01745329 # Beam angle in radians\n",
-    "t = dT\n",
+    "t = dTT\n",
     "\n",
     "# Define the equation\n",
     "equation = r**3 + R*r**2 - (G * M ) / omega**2\n",
@@ -370,13 +364,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -385,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [
     {
