--- a/data_sat_noGauss.ipynb
+++ b/data_sat_noGauss.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Peak Time Period: 2363.70 to 2762.29\n"
+      "Peak Time Period: 2363.70 to 2762.29\n",
+      "64.64835284351076\n"
      ]
     }
    ],
@@ -123,21 +124,21 @@
     "start_time = x0_fit - 2 * sigma_fit\n",
     "end_time = x0_fit + 2 * sigma_fit\n",
     "print(f\"Peak Time Period: {start_time:.2f} to {end_time:.2f}\")\n",
-    "dT = 2*np.sqrt(2*np.log(2))*sigma_fit"
+    "dT = 2*np.sqrt(2*np.log(2))*sigma_fit\n",
+    "print(dT)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solution 1: 5552339.10958999\n",
-      "Solution 2: -5961669.554795 - 5537230.18977095*I\n",
-      "Solution 3: -5961669.554795 + 5537230.18977095*I\n"
+      "Solution 1: -6371000.00000000\n",
+      "Solution 2: 0.0\n"
      ]
     }
    ],
@@ -155,7 +156,7 @@
     "t = dT\n",
     "\n",
     "# Define the equation\n",
-    "equation = r**3 + R*r**2 - (G * M * dT**2) / a**2\n",
+    "equation = r**3 + R*r**2 - (G * M * dT**2* (R + r)**2) / a**2 * r**2\n",
     "\n",
     "# Solve the equation for r\n",
     "solutions = sp.solve(equation, r)\n",
