--- a/Sun/data_analysis_fit.ipynb
+++ b/Sun/data_analysis_fit.ipynb
@@ -7943,7 +7943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -7978,7 +7978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -8004,7 +8004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -8012,7 +8012,9 @@
      "output_type": "stream",
      "text": [
       "0.49087803867646174\n",
-      "36.5560381522058\n"
+      "36.5560381522058\n",
+      "[0.24799355 0.20963581 0.19219904 0.11364983 0.29267135]\n",
+      "[18.34633453 15.31880474 13.99953576  8.60837163 22.24857506]\n"
      ]
     }
    ],
@@ -8025,6 +8027,9 @@
     "sigma_Bl = np.sqrt(np.sum(sigmas[:,1]**2))\n",
     "print(sigma_visibility)\n",
     "print(sigma_Bl)\n",
+    "\n",
+    "print(sigmas[:,0])\n",
+    "print(sigmas[:,1])\n",
     "\n"
    ]
   },
